--- a/styles.css
+++ b/styles.css
@@ -155,23 +155,22 @@ section p {
 /* ?--------------- GALLERY SECTION -------------------- */
 
 .section__gallery {
-  margin: 0 auto;
   background-color: rgb(219, 43, 57);
+}
+
+.gallery_wrapper {
+  margin: 0 auto;
+  width: 90vw;
 }
 
 .images__wrapper {
-  width: 100%;
-  object-fit: cover;
-  display: block;
-  background-color: rgb(219, 43, 57);
-  padding: 1rem;
 }
 
 .section__gallery img {
-  margin: 0 auto;
-  /* width: 90%; */
+  object-fit: cover;
   border: 1px solid rgb(219, 43, 57);
   border-radius: 5px;
+  margin: 0;
 }
 
 /* ?--------------- FORM SECTION -------------------- */
